rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x790_1995-TC1-TC2_X790ASN1Module.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x790_1995-TC1-TC2_X790ASN1Module.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 741, column 62]
     │
     │ 
 741 │  hoyr" by "hour" -- ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 742 │            intervalEnd {hour 23, minute 59}}},
 743 │    ...
 744 │  }
     │
─────╯
