rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x792_1999_AuditASN1FileModule.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x792_1999_AuditASN1FileModule.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod audit_asn1_file_module {
    extern crate alloc;
    use super::cmip_1::{Attribute, ObjectClass, ObjectInstance};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " Anonymous SET OF member "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(identifier = "SEQUENCE")]
    pub struct AnonymousAuditFile {
        #[rasn(identifier = "managedObjectClass")]
        pub managed_object_class: Option<ObjectClass>,
        #[rasn(identifier = "managedObjectInstance")]
        pub managed_object_instance: ObjectInstance,
        #[rasn(identifier = "attributeList")]
        pub attribute_list: SetOf<Attribute>,
    }
    impl AnonymousAuditFile {
        pub fn new(
            managed_object_class: Option<ObjectClass>,
            managed_object_instance: ObjectInstance,
            attribute_list: SetOf<Attribute>,
        ) -> Self {
            Self {
                managed_object_class,
                managed_object_instance,
                attribute_list,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct AuditFile(pub SetOf<AnonymousAuditFile>);
}
