rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x830_1995_DirectoryProtectionMappings.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x830_1995_DirectoryProtectionMappings.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod directory_protection_mappings {
    extern crate alloc;
    use super::guls_security_transformations::{
        DIR_ENCRYPTED_TRANSFORMATION, DIR_SIGNATURE_TRANSFORMATION, DIR_SIGNED_TRANSFORMATION,
    };
    use super::notation::*;
    use super::object_identifiers::{GULS_SECURITY_TRANSFORMATIONS, NOTATION};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
