rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x830_1995_GulsSecurityTransformations.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x830_1995_GulsSecurityTransformations.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod guls_security_transformations {
    extern crate alloc;
    use super::authentication_framework::AlgorithmIdentifier;
    use super::notation::*;
    use super::object_identifiers::{NOTATION, SECURITY_TRANSFORMATIONS};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
