rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x830_1995_ObjectIdentifiers.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x830_1995_ObjectIdentifiers.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod object_identifiers {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    pub static DIR_PROTECTION_MAPPINGS: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***MODULES, &[4u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static GENERAL_TRANSFER_SYNTAX: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***GENERIC_ULS, &[2u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static GENERIC_PROTECTING_TRANSFER_SYNTAX: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| {
            Oid::new(&[&***MODULES, &[7u32]].concat())
                .unwrap()
                .to_owned()
        });
    #[doc = " EXPORTS All"]
    pub static GENERIC_ULS: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 20u32]).to_owned());
    pub static GULS_PROTECTION_MAPPINGS: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***MODULES, &[5u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static GULS_SECURITY_EXCHANGES: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***MODULES, &[2u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static GULS_SECURITY_TRANSFORMATIONS: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***MODULES, &[3u32]].concat())
            .unwrap()
            .to_owned()
    });
    #[doc = " Categories of information object"]
    pub static MODULES: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***GENERIC_ULS, &[1u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static NOTATION: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***MODULES, &[1u32]].concat())
            .unwrap()
            .to_owned()
    });
    #[doc = " ASN.1 modules"]
    pub static OBJECT_IDENTIFIERS: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***MODULES, &[0u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static SECURITY_EXCHANGES: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***GENERIC_ULS, &[4u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static SECURITY_TRANSFORMATIONS: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***GENERIC_ULS, &[5u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static SESE_APDUS: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***MODULES, &[6u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static SPECIFIC_TRANSFER_SYNTAX: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***GENERIC_ULS, &[3u32]].concat())
            .unwrap()
            .to_owned()
    });
}
