rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x833_1995_GenericProtectingTransferSyntax.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x833_1995_GenericProtectingTransferSyntax.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to resolve argument SECURITY-TRANSFORMATION.&sT-Identifier of parameterized implementation.


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod generic_protecting_transfer_syntax {
    extern crate alloc;
    use super::notation::*;
    use super::object_identifiers::NOTATION;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
